Kutta Merson method algorithm implemented

--- a/src/com/maxclay/view/KuttaMersonMethodTab.fxml
+++ b/src/com/maxclay/view/KuttaMersonMethodTab.fxml
@@ -6,11 +6,11 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxWidth="1250.0" prefHeight="670.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.maxclay.controller.RungeKuttaMethodController">
+<AnchorPane maxWidth="1250.0" prefHeight="670.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.maxclay.controller.KuttaMersonMethodController">
    <children>
       <Pane fx:id="pane" layoutX="6.0" prefHeight="670.0" prefWidth="1250.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="6.0" AnchorPane.rightAnchor="-6.0" AnchorPane.topAnchor="0.0">
          <children>
-         <Label layoutX="14.0" layoutY="14.0" text="Solving Cauchy problem using Runge-Kutta method for">
+         <Label layoutX="14.0" layoutY="14.0" text="Solving Cauchy problem using Kutta-Merson method for">
                <font>
                   <Font size="16.0" />
                </font></Label>
