--- a/src/com/maxclay/view/RootLayout.fxml
+++ b/src/com/maxclay/view/RootLayout.fxml
@@ -16,7 +16,7 @@
 		                <fx:include source="MiddlePointMethodTab.fxml"/>
 		            </content>
 		        </Tab>
-		        <Tab text="Runge–Kutta method">
+		        <Tab text="Kutta-Merson method">
 		            <content>
 		                <fx:include source="KuttaMersonMethodTab.fxml"/>
 		            </content>
